--- a/src/main/java/org/bookmark/pro/windows/help/BookmarkHelpForm.form
+++ b/src/main/java/org/bookmark/pro/windows/help/BookmarkHelpForm.form
@@ -42,7 +42,7 @@
                       <text value="Add/Edit:"/>
                     </properties>
                   </component>
-                  <component id="dd738" class="javax.swing.JLabel">
+                  <component id="dd738" class="javax.swing.JLabel" binding="aeLabel">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -79,7 +79,7 @@
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
-                  <component id="50f42" class="javax.swing.JLabel">
+                  <component id="50f42" class="javax.swing.JLabel" binding="deleteLabel">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
