--- a/src/main/java/org/bookmark/pro/windows/setting/BookmarkSettingForm.form
+++ b/src/main/java/org/bookmark/pro/windows/setting/BookmarkSettingForm.form
@@ -261,7 +261,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="选中提示"/>
+                      <text value="Tips:"/>
                     </properties>
                   </component>
                   <component id="fc436" class="javax.swing.JComboBox" binding="selectTipBox">
