--- a/src/main/java/org/bookmark/pro/windows/help/BookmarkHelpForm.form
+++ b/src/main/java/org/bookmark/pro/windows/help/BookmarkHelpForm.form
@@ -20,7 +20,7 @@
           <grid id="cb753" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="10" left="8" bottom="10" right="16"/>
             <constraints>
-              <tabbedpane title="Using Help"/>
+              <tabbedpane title="Help"/>
             </constraints>
             <properties/>
             <border type="etched"/>
